--- a/index.ipynb
+++ b/index.ipynb
@@ -270,22 +270,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-9-5e071f2936e6>, line 1)",
+     "evalue": "invalid syntax (<ipython-input-12-edff4d74bf2f>, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-9-5e071f2936e6>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    str(www.) + 'vandelay.com' # 'www.vandelay.com'\u001b[0m\n\u001b[0m            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-12-edff4d74bf2f>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    str('www.'') + 'vandelay.com' # 'www.vandelay.com'\u001b[0m\n\u001b[0m                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
-    "str(www.) + 'vandelay.com' # 'www.vandelay.com'"
+    "str('www.'') + 'vandelay.com' # 'www.vandelay.com'"
    ]
   },
   {
